Atualizacao CSS - mudança no layout

--- a/index.html
+++ b/index.html
@@ -24,42 +24,42 @@
             <p>Seja você um iniciante ou alguém que já possui experiência, este quiz é uma ótima oportunidade para avaliar suas habilidades e continuar evoluindo no mundo do front-end!</p>
         </section>
         <!--Pergunta 1: multipla escolha-->
-        <section class="pergunta">
+        <section class="pergunta  pergunta1">
             <h2>Pergunta 1: Qual das opções abaixo é uma tag sem fechamento em <abbr title="HyperText Markup Language">HTML</abbr>?</h2>
-            <form>
-                <div>
+            <form class="opcaop1-container">
+                <div class="opcaop1">
                     <input type="radio" value="div" id="p1a" name="pergunta1" class="selecao-resposta-p1">
                     <label for="p1a" class="alternativasp1">&lt;div&gt; </label><br>
                 </div>    
 
-                <div>
+                <div class="opcaop1">
                     <input type="radio" value="span" id="p1b" name="pergunta1" class="selecao-resposta-p1">
                     <label for="p1b" class="alternativasp1">&lt;span&gt;</label><br>
                 </div>
 
-                <div>
+                <div class="opcaop1">
                     <input type="radio" value="img" id="p1c" name="pergunta1" class="selecao-resposta-p1">
                     <label for="p1c" class="alternativasp1">&lt;img&gt;</label><br>
                 </div>
 
-                <div>
+                <div class="opcaop1">
                     <input type="radio" value="paragrafo" id="p1d" name="pergunta1" class="selecao-resposta-p1">
                     <label for="p1d" class="alternativasp1">&lt;p&gt;</label><br>
                 </div>
             </form>
         </section>
         <!--Pergunta 2: texto-->
-        <section class="pergunta">
+        <section class="pergunta pergunta2">
             <h2>Pergunta 2: Qual a propriedade CSS usada para alterar a cor do texto?</h2>
             <form>
                 <input type="text" id="p2" name="pergunta2" placeholder="Digite aqui sua resposta..." class="resposta-inserida-p2">
             </form>
         </section>
         <!--Pergunta 3: senha-->
-        <section class="pergunta">
+        <section class="pergunta pergunta3">
             <h2>Pergunta 3: Escreva um exemplo de senha forte</h2>
             <form>
-                <div class="password.container">
+                <div class="password-container">
                     <input type="password" name="pergunta3" id="p3" placeholder="Digite uma senha..." class="resposta-inserida-p3">
                     <i class="fa-solid fa-eye toggle-password"></i>
                 </div>
